<resources>
    <string name="app_name">ContactsRoom</string>

    <string name="pls_pass">Please Enter Password</string>
    <string name="pls_email">Please Enter Email</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="btn_login">Login</string>
    <string name="welcome">Welcome !</string>
    <string name="create_new">Create Your Account</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>

    <string name="login_failed">"Login failed, User does not exist"</string>

    <string name="success">Account Created Successfully</string>
    <string name="login_success">Login Success</string>

    <string name="login">Login To Your Account</string>
    <string name="cont_logo">Contact Logo</string>

    <string name="add_new">Add New Contact</string>
    <string name="hint_name">Contact Name</string>
    <string name="hint_phone">Phone No.</string>
    <string name="saveBtn">Save</string>
    <string name="vecImg">Vector</string>
    <string name="fab">Floating Action Button</string>


    <string name="work">Work</string>
    <string name="friends">Friends</string>
    <string name="school">School</string>
    <string name="blacklist">Blacklist</string>
    <string name="neighbors">Neighbors</string>
</resources>