<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".ui.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/logoIv"
            android:layout_width="171dp"
            android:layout_height="156dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/cont_logo"
            android:src="@drawable/ic_contact_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new"
            android:padding="8dp"
            style="@style/Widget.ContactsRoom.TextView"
            android:textSize="24sp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoIv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_two"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/sign_up_bg"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginTop="34dp"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/prompt_email"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginTop="24dp"
            android:hint="@string/prompt_password"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/signUpBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="200dp"
            android:layout_height="59dp"
            android:layout_marginStart="76dp"
            android:layout_marginTop="52dp"
            android:background="@drawable/round_btn"
            android:text="@string/btn_sign_up" />


        <Button
            android:id="@+id/logInBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="59dp"
            android:layout_marginStart="76dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="42dp"
            android:background="@drawable/round_btn"
            android:backgroundTint="#FFFFFF"
            android:text="@string/btn_login" />

    </LinearLayout>
</LinearLayout>
</ScrollView>